--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,3 +14,5 @@ background_opacity 0.95
 include dracula.conf
 include dracula.conf
 include dracula.conf
+include dracula.conf
+include dracula.conf
