--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,8 +11,7 @@ url_style        dotted
 #Close the terminal without confirmation
 confirm_os_window_close 0
 background_opacity 1
-include dracula.conf
-include dracula.conf
-include dracula.conf
-include dracula.conf
-include dracula.conf
+include mocha.conf
+include mocha.conf
+include mocha.conf
+include mocha.conf
