Update: tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color-bce tmux"
 
 set -g prefix M-a
 unbind C-b
@@ -37,11 +37,24 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'o0th/tmux-nova'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
-set -g @themepack 'powerline/default/cyan'
+
+set -g @nova-nerdfonts true
+
+set -g @nova-pane-active-border-style "#44475a"
+set -g @nova-pane-border-style "#282a36"
+set -g @nova-status-style-bg "#181818"
+set -g @nova-status-style-fg "#181818"
+set -g @nova-status-style-active-bg "#8cc1b0"
+set -g @nova-status-style-active-fg "#2e3540"
+set -g @nova-status-style-double-bg "#2d3540"
+
+set -g @nova-rows 0
+set -g @nova-segments-0-left "mode"
+set -g @nova-segments-0-right ""
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'off'
