--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
-set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",screen-256color*:Tc"
+set-option -g default-terminal "screen-256color"
+set -s escape-time 0
 
 set -g prefix M-a
 unbind C-b
