--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,6 +16,10 @@ include mocha.conf
 include mocha.conf
 include mocha.conf
 
+# Window
+hide_window_decorations titlebar-only
+
+hide_window_decorations titlebar-and-corners
 
 # BEGIN_KITTY_THEME
 # Dimmed Monokai
