--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,9 +2,9 @@ set -ga terminal-overrides ",screen-256color*:Tc"
 set-option -g default-terminal "screen-256color"
 set -s escape-time 0
 
-set -g prefix M-a
+set -g prefix C-a
 unbind C-b
-bind-key M-a send-prefix
+bind-key C-a send-prefix
 
 unbind %
 bind d split-window -h 
