update neovim configuration
Signed-off-by: SIGMazer <mazinasd7@gmail.com>

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,4 +24,7 @@ hide_window_decorations titlebar-and-corners
 # BEGIN_KITTY_THEME
 # Dimmed Monokai
 include current-theme.conf
-# END_KITTY_THEME
+
+map alt+h send_text all \x1b[1;6D
+
+
